# quadrupedV2-raspberry-pi-pico

./: .gitignore  CMakeLists.txt  QuadrupedV2_2.cpp  README.md  devices.save  upload.sh
Libraries/MPU6050/: README.md
Libraries/Servo/: CMakeLists.txt  README.md
Libraries/nRF24L01/: README.md
PCB/: PCB_Quadruped On Pico.json  PCB_Quadruped On Pico_3.json  Quadruped On Pico.json  info
inc/: LEGCLASS.h  LegClass.h  MPU6050.h  MYSERVO.h  Mapping.h  Matrix.h  Motions.h  NRF24.h  PID.h  Servo.h
inc/MPU6050/: MPU6050.h  README.md
inc/MyServo/: MYSERVO.h
inc/nRF24L01/: README.md
src/: LEGCLASS.cpp  LegClass.cpp  MPU6050.cpp  MYSERVO.cpp  MyServo.cpp  NRF24.cpp  PID.cpp  README.md  Servo.cpp  main.cpp
